# rsomics-limma-squeeze-var

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  fitfdist.rs  io.rs  lib.rs  special.rs
tests/: compat.rs  mkfixture.R  oracle.R
tests/golden/: df_pg.tsv  post.pergene.expected.tsv  post.scalar.expected.tsv  vars.tsv  vars_pg.tsv
